fix text alignment

--- a/assetts/stylesheet/main.css
+++ b/assetts/stylesheet/main.css
@@ -46,3 +46,49 @@ table {
  border-collapse: collapse;
  border-spacing: 0;
 }
+
+/* 
+GRID LAYOUT */
+*,
+*::before
+*::after{
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+.container{
+    width: 960px;
+    padding-left: 30px;
+    padding-right: 30px;
+    margin: 0 auto;
+    
+}
+/* =========================================
+TYPOGRAPHY
+============================================ */
+h1, h3, h4, h5, p{
+    margin-bottom: 22px;
+}
+/* 
+============================================
+BUTTONS
+============================================*/
+.btn{
+    border-radius: 5px;
+    display: inline-block;
+    margin: 0;
+}
+.btn-alt{
+    border: 1px solid  #dfe2e5;
+    padding: 10px 30px;
+}
+.hero{
+    padding: 22px 80px 66px 80px;
+}
+.style{
+    padding-right: 10%;
+}
+
+   .container1{
+       margin-right: 15px;
+   }
